--- a/src/pages/Landing.module.css
+++ b/src/pages/Landing.module.css
@@ -20,6 +20,18 @@
   line-height: 1.3;
 }
 
+.header {
+  font-size: 24px;
+  font-weight: 600;
+  color: white;
+}
+
+.description {
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(146, 146, 146);
+}
+
 .crush {
   color: var(--pink);
 }
