Back to home button

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,3 +23,12 @@
 .crush {
   color: var(--pink);
 }
+
+.crush_btn {
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.crush_btn:hover {
+  background-color: white;
+}
